bugfix _proj tech right align

--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -61,7 +61,11 @@
     flex-direction: row-reverse;
 }
 
-.right-align {
+.align-right {
     text-align: right;
     align-items: flex-end;
+}
+
+.justify-right {
+    justify-content: flex-end;
 }
